--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </div>
 
                 <div class="demo__group">
-                    <label class="demo__label">minOpacity:</label> <input type="number" style="width: 3em" v-model.number="minOpacity" min="0" max="1" step="0.1" />
+                    <label class="demo__label">minOpacity:</label> <input type="number" v-model.number="minOpacity" min="0" max="1" step="0.1" />
                 </div>
 
                 <div class="demo__group">
-                    <label class="demo__label">maxOpacity:</label> <input type="number" style="width: 3em" v-model.number="maxOpacity" min="0" max="1" step="0.1" />
+                    <label class="demo__label">maxOpacity:</label> <input type="number" v-model.number="maxOpacity" min="0" max="1" step="0.1" />
                 </div>
 
                 <div class="demo__group">
