Update dev deps and small fixes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                 <div class="form__group">
                     <label class="form__label">background:</label>
-                    <label class="form__label_radio"><input name="bg" type="radio" value="white" checked v-model="bg" @change="changeBg" /> White</label>
-                    <label class="form__label_radio"><input name="bg" type="radio" value="black" v-model="bg" @change="changeBg" /> Black</label>
+                    <label class="form__label_radio"><input name="bg" type="radio" value="white" checked v-model="bg" /> White</label>
+                    <label class="form__label_radio"><input name="bg" type="radio" value="black" v-model="bg" /> Black</label>
                 </div>
 
                 <div class="form__group">
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="form__group">
-                    <label class="form__label_checkbox"><input type="checkbox" v-model="debug" @change="setDebug" /> debug</label>
+                    <label class="form__label_checkbox"><input type="checkbox" v-model="debug" /> debug</label>
                 </div>
             </div>
 
