--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             </div>
         </form>
     </div>
-    <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.js"></script>
-    <!--<script src="../snowflakes/dist/snowflakes.js"></script>-->
+    <script src="dist/snowflakes.min.js"></script>
     <script src="dist/index.js"></script>
 </body>
 </html>
